<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

<!-- Constraint Layout was used here primarily because of the
  positioning of the whole components, letting more
  "central|bottom" was the plan, so for the design i thought
  that the Constraint Layout was the best option -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">


        <EditText
            android:id="@+id/email"
            style="@style/login_elements"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/distance_login"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email" />

        <Button
            android:id="@+id/signIn"
            style="@style/login_centralized_elements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/distance_login"
            android:text="@string/action_sign_in_short"
            app:layout_constraintBottom_toTopOf="@+id/signInOrRegister"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password" />

        <Button
            android:id="@+id/signInOrRegister"
            style="@style/login_centralized_elements"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="@dimen/distance_login"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signIn"
            app:layout_constraintStart_toStartOf="@+id/signIn" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/distance_login"
            android:layout_marginBottom="@dimen/distance_login"
            android:text="@string/app_name"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>